# research_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  test_arxiv_tool.py
.streamlit/: config.toml
agent/: agent.py  prompt.py
config/: settings.py
data/chroma_db/62a38e97-534a-48bb-b2a9-e3ed1457555e/: index_metadata.pickle
indexing/: build_index.py
rag/: vectorstore.py
src/agent/: agent.py
src/checkpointing/: checkpointer.py
src/config/: secrets.py
src/rag/: vectorstore.py
src/tools/: arxiv_retrieval.py  web_search.py  wikipedia_search.py
tools/: arxiv_retrieval.py  retrieval.py  youtube_transcripts.py
